--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.71.10",
@@ -27,6 +29,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-toastify": "^11.0.5",
+    "stripe": "^18.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
